se trabajo en el fondo, boton de wpp, en sass y en los colores

--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -1,4 +1,8 @@
+//variables
+@import "utilidades/variables";
+
 //html
+
 @import "utilidades/index";
 @import "utilidades/sobremi";
 @import "utilidades/cartanatal";
