--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,70 @@
-.header-astrox .logo-astrox {
-  width: 10rem;
-  height: 10rem; }
+body {
+  background: linear-gradient(to right, #4e4376, #2b5876); }
+  body .boton-wpp {
+    text-align: center;
+    position: fixed;
+    z-index: 999;
+    border-radius: 50%;
+    bottom: 20px;
+    right: 25px;
+    padding: 25px;
+    transition: ease 0,3s; }
+    body .boton-wpp .whatsapp {
+      list-style: none;
+      text-decoration: none;
+      color: black; }
+      body .boton-wpp .whatsapp img {
+        width: 10rem;
+        height: 10rem; }
+  body .boton-wpp:hover {
+    transform: scale(1.1);
+    transition: 0.3s; }
+
+.contenedor-menu {
+  background: linear-gradient(135deg, #69FF97 10%, #00E4FF 100%); }
+  .contenedor-menu .header-astrox {
+    margin-left: 3rem;
+    margin-right: 3rem; }
+    .contenedor-menu .header-astrox .navbar {
+      background: linear-gradient(135deg, #69FF97 10%, #00E4FF 100%); }
+    .contenedor-menu .header-astrox .logo-astrox {
+      width: 10rem;
+      height: 10rem; }
+
+main .contenido-principal {
+  margin-top: 3rem;
+  padding: 8rem;
+  background-repeat: no-repeat;
+  background-size: cover; }
+  main .contenido-principal h1 {
+    color: white;
+    text-align: center; }
+  main .contenido-principal p {
+    color: white;
+    text-align: center;
+    margin-top: 1.5rem; }
+
+footer {
+  background: linear-gradient(135deg, #69FF97 10%, #00E4FF 100%);
+  padding: 0.7rem;
+  text-align: center;
+  color: #1f1f1f; }
+  footer .footer-contenedor {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 2rem;
+    margin-bottom: 2rem; }
+    footer .footer-contenedor .imagenes-footer a {
+      list-style: none;
+      text-decoration: none; }
+      footer .footer-contenedor .imagenes-footer a img {
+        width: 2.2rem;
+        height: 2.2rem;
+        margin-right: 0.3rem; }
+  footer .derechos a {
+    text-decoration: none;
+    list-style: none;
+    color: #f76917; }
 
 * {
   margin: 0;
