--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,8 @@
 body {
   background: linear-gradient(to right, #4e4376, #2b5876); }
+  body .barra-separadora img {
+    text-align: center;
+    width: 100%; }
   body .boton-wpp {
     text-align: center;
     position: fixed;
@@ -8,11 +11,13 @@ body {
     bottom: 20px;
     right: 25px;
     padding: 25px;
-    transition: ease 0,3s; }
+    transition: ease 0,3s;
+    margin-bottom: 2rem; }
+    body .boton-wpp p {
+      color: white; }
     body .boton-wpp .whatsapp {
       list-style: none;
-      text-decoration: none;
-      color: black; }
+      text-decoration: none; }
       body .boton-wpp .whatsapp img {
         width: 10rem;
         height: 10rem; }
@@ -32,8 +37,8 @@ body {
       height: 10rem; }
 
 main .contenido-principal {
-  margin-top: 3rem;
-  padding: 8rem;
+  margin-top: 1.5rem;
+  padding: 6rem;
   background-repeat: no-repeat;
   background-size: cover; }
   main .contenido-principal h1 {
@@ -43,6 +48,34 @@ main .contenido-principal {
     color: white;
     text-align: center;
     margin-top: 1.5rem; }
+
+section .section-astrox {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  section .section-astrox h2 {
+    text-align: center;
+    color: white;
+    margin-top: 3rem; }
+  section .section-astrox p {
+    text-align: center;
+    color: white;
+    margin-bottom: 2rem; }
+  section .section-astrox .cartanatal-index {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 35rem;
+    height: 35rem;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+    background: #fffff0;
+    margin-bottom: 2rem; }
+    section .section-astrox .cartanatal-index img {
+      width: 32rem;
+      height: 32rem;
+      margin-top: 1.5rem; }
 
 footer {
   background: linear-gradient(135deg, #69FF97 10%, #00E4FF 100%);
