--- a/sass/utilidades/_index.scss
+++ b/sass/utilidades/_index.scss
@@ -1,5 +1,12 @@
 body{
     background: $color-fondo;
+    .barra-separadora{
+        img{
+            text-align: center;
+            width: 100%;
+            }
+    }
+    
     .boton-wpp{
         text-align: center;
         position: fixed;
@@ -9,16 +16,20 @@ body{
         right: 25px;
         padding: 25px;
         transition: ease 0,3s;
-        
-        .whatsapp{
+        margin-bottom: 2rem;
+        p{
+            color: white;
+        }
+
+         .whatsapp{
             list-style: none;
             text-decoration: none;
-            color: black;
             
             img{
                 width: 10rem;
                 height: 10rem;
                }
+            
         }
     
     }
@@ -45,8 +56,8 @@ body{
 //header del index
 main{
     .contenido-principal{
-        margin-top: 3rem;
-        padding: 8rem;
+        margin-top: 1.5rem;
+        padding: 6rem;
         background-repeat: no-repeat;
         background-size: cover;
         h1{
@@ -59,6 +70,45 @@ main{
             margin-top: 1.5rem;
         }
     }
+}
+
+//section
+
+section{
+    .section-astrox{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        h2{
+            text-align: center;
+            color: white;
+            margin-top: 3rem;
+        }
+        p{
+            text-align: center;
+            color: white;
+            margin-bottom: 2rem;
+        }
+        .cartanatal-index{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 35rem;
+            height: 35rem;
+            -moz-border-radius: 50%;
+            -webkit-border-radius: 50%;
+            border-radius: 50%;
+            background: #fffff0;
+            margin-bottom: 2rem;
+            img{
+                width: 32rem;
+                height: 32rem;
+                margin-top: 1.5rem;
+                }
+        }
+    }
+    
+    
 }
 
 //footer del index
