se agrego una section, se trabajo con flex en los divs para acomodar el index

--- a/css/styles.css
+++ b/css/styles.css
@@ -61,21 +61,42 @@ section .section-astrox {
     text-align: center;
     color: white;
     margin-bottom: 2rem; }
-  section .section-astrox .cartanatal-index {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 35rem;
-    height: 35rem;
-    -moz-border-radius: 50%;
-    -webkit-border-radius: 50%;
-    border-radius: 50%;
-    background: #fffff0;
-    margin-bottom: 2rem; }
-    section .section-astrox .cartanatal-index img {
-      width: 32rem;
-      height: 32rem;
-      margin-top: 1.5rem; }
+  section .section-astrox .cartanatal-servicios {
+    display: flex; }
+    section .section-astrox .cartanatal-servicios .servicios-texto {
+      margin-top: 8.5rem; }
+      section .section-astrox .cartanatal-servicios .servicios-texto a {
+        margin-right: 1rem;
+        margin-left: 8rem;
+        text-decoration: none;
+        color: orange; }
+      section .section-astrox .cartanatal-servicios .servicios-texto p {
+        text-align: center;
+        font-size: larger; }
+      section .section-astrox .cartanatal-servicios .servicios-texto li {
+        margin-left: 4rem;
+        color: white; }
+    section .section-astrox .cartanatal-servicios .cartanatal-index {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 35rem;
+      height: 35rem;
+      -moz-border-radius: 50%;
+      -webkit-border-radius: 50%;
+      border-radius: 50%;
+      background: #fffff0;
+      margin-bottom: 2rem;
+      margin-right: 5rem;
+      overflow: hidden; }
+      section .section-astrox .cartanatal-servicios .cartanatal-index img {
+        width: 32rem;
+        height: 32rem;
+        margin-top: 1.5rem;
+        transition: 0.5s;
+        object-fit: cover; }
+      section .section-astrox .cartanatal-servicios .cartanatal-index img:hover {
+        transform: scale(1.1); }
 
 footer {
   background: linear-gradient(135deg, #69FF97 10%, #00E4FF 100%);
