--- a/sass/utilidades/_index.scss
+++ b/sass/utilidades/_index.scss
@@ -152,11 +152,25 @@ section{
             .conociendo-pluton{
                 width: 60rem;
                 height: 40rem;
-    
             }
+              
+        }
+        .carousel-item{
+            .conociendo-jupiter{
+                width: 60rem;
+                height: 40rem;
+                }
+                .conociendo-luna{
+                width: 60rem;
+                height: 40rem;
+                }
+            }
+        
+            
         }
     }
-}
+    
+
 
 
 
