--- a/sass/utilidades/_variables.scss
+++ b/sass/utilidades/_variables.scss
@@ -1,5 +1,6 @@
 $color-h1: rgb(255, 255, 255);
 $color-p: white;
+$color-div: linear-gradient(to right, #4e4376, #2b5876);
 $color-fondo: linear-gradient(to right, #4e4376, #2b5876);
 $color-header: linear-gradient( 135deg, #69FF97 10%, #00E4FF 100%);
 $color-footer: linear-gradient( 135deg, #69FF97 10%, #00E4FF 100%);
