--- a/css/styles.css
+++ b/css/styles.css
@@ -287,7 +287,7 @@ footer {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-  grid-template-areas: "carta-escrita carta-escrita-revo" "carta-online carta-revo";
+  grid-template-areas: "carta-online carta-revo" "carta-escrita carta-escrita-revo";
   justify-content: center;
   justify-items: center;
   text-align: center;
@@ -335,6 +335,115 @@ footer {
   .preguntas-frecuentes p {
     width: 50rem;
     text-align: center; }
+
+.main-talleres {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: none;
+  color: white; }
+  .main-talleres div {
+    transition: transform 0.5s;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+  .main-talleres div:hover {
+    transform: scale(1.1); }
+  .main-talleres .taller-luna {
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+    background: linear-gradient(to right, #4e4376, #2b5876);
+    width: 80rem;
+    text-align: center;
+    padding: 15rem; }
+    .main-talleres .taller-luna .p-luna {
+      width: 20rem; }
+  .main-talleres .taller-ascendente {
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+    background: linear-gradient(to right, #4e4376, #2b5876);
+    width: 80rem;
+    text-align: center;
+    padding: 15rem; }
+    .main-talleres .taller-ascendente .h2-ascendente {
+      text-align: left; }
+    .main-talleres .taller-ascendente p {
+      width: 20rem; }
+  .main-talleres .taller-marte {
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+    background: linear-gradient(to right, #4e4376, #2b5876);
+    width: 80rem;
+    text-align: center;
+    padding: 15rem; }
+    .main-talleres .taller-marte .h2-marte {
+      text-align: left; }
+    .main-talleres .taller-marte p {
+      width: 20rem; }
+  .main-talleres .taller-venus {
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+    background: linear-gradient(to right, #4e4376, #2b5876);
+    width: 80rem;
+    text-align: center;
+    padding: 15rem; }
+    .main-talleres .taller-venus .venus-titulo {
+      flex-direction: column; }
+      .main-talleres .taller-venus .venus-titulo img {
+        width: 20rem; }
+    .main-talleres .taller-venus p {
+      width: 20rem;
+      margin-left: 5rem; }
+
+.main-101 div {
+  display: flex;
+  flex-direction: column; }
+  .main-101 div p {
+    margin-top: 3rem;
+    color: white; }
+
+.main-101 h1 {
+  text-align: center;
+  color: white;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  padding: 3rem; }
+
+.main-101 .pluton-101 {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  padding: 4rem; }
+  .main-101 .pluton-101 img {
+    width: 50rem; }
+  .main-101 .pluton-101 p {
+    width: 30rem; }
+
+.main-101 .jupiter-101 {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  padding: 4rem; }
+  .main-101 .jupiter-101 img {
+    width: 50rem; }
+  .main-101 .jupiter-101 p {
+    width: 30rem; }
+
+.main-101 .luna-101 {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  padding: 4rem; }
+  .main-101 .luna-101 img {
+    width: 50rem; }
+  .main-101 .luna-101 p {
+    width: 30rem; }
 
 * {
   margin: 0;
