--- a/sass/utilidades/_cartanatal.scss
+++ b/sass/utilidades/_cartanatal.scss
@@ -20,8 +20,8 @@
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     grid-template-areas: 
-    "carta-escrita carta-escrita-revo"
-    "carta-online carta-revo";
+    "carta-online carta-revo"
+    "carta-escrita carta-escrita-revo";
     justify-content: center;
     justify-items: center;
     text-align: center;
@@ -65,6 +65,7 @@
     }
   
 }
+// preguntas frecuentes---------------
 .preguntas-frecuentes{
     display: flex;
     flex-direction: column;
